--- a/_layouts/base.html
+++ b/_layouts/base.html
@@ -18,6 +18,8 @@ common-ext-js:
     sri: "sha384-wfSDF2E50Y2D1uUdj0O3uMBJnjuUD4Ih7YwaYd1iqfktj0Uod8GCExl3Og8ifwB6"
 common-js:
   - "/assets/js/beautifuljekyll.js"
+  - "/assets/js/demo.js"
+  - "/assets/js/purpleads.js"
 ---
 
 <!DOCTYPE html>
